fix subfooter spacing

--- a/static/css/tools/base_tools.scss
+++ b/static/css/tools/base_tools.scss
@@ -60,6 +60,10 @@ body {
   padding-bottom: 1.5rem !important;
 }
 
+#sub-footer a {
+  margin-left: .75rem;
+}
+
 #main-pane {
   position: absolute;
   top: 0;
